--- a/src/post/post__title/post__title.scss
+++ b/src/post/post__title/post__title.scss
@@ -1,10 +1,26 @@
 $title-text-color: #fff;
 
 .post__title {
-    font-size: 43px;
+    font-size: 2.688rem;
     font-family: 'Roboto', sans-serif;
     font-weight: 500;
-    line-height: 57px;
+    line-height: 3.563rem;
     color: $title-text-color;
     z-index: 1;
+}
+
+
+@media screen and (max-width: 1000px) {
+    .post__title {
+        font-size: 2.3rem;
+        line-height: 3.5rem;
+
+    }
+}
+
+@media screen and (max-width: 637px) {
+    .post__title {
+        font-size: 1.8rem;
+        line-height: 2.5rem;
+    }
 }
