--- a/src/slider/slider__slider-view/slider__slider-view.scss
+++ b/src/slider/slider__slider-view/slider__slider-view.scss
@@ -13,5 +13,7 @@ $slider-height: 68vh;
         left: 0;
         background-color: rgba(0, 0, 0, 0.1);
         opacity: .6;
+        overflow-x: hidden;
+
     }
 }
